# monorepo

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  gazelle_python.yaml  go.mod  go.sum  lint.sh  requirements.txt  requirements_lock.txt  rust-project.json
base_images/apko/wolfi-base/: apko.lock.json
bazel/: python.bzl
bazel/gazelle/language/ts/: BUILD.bazel
bazel/oci/loader/: BUILD.bazel  builder.go  docker.go  main.go
bazel/patches/: khronos_api.patch
bazel/workspace/tools/pytest/: pytest_wrapper.py
docs/superpowers/plans/: 2026-05-03-spritegen-stage1.md  2026-05-03-spritegen-stage2.md  2026-05-03-spritegen-stage4.md
docs/superpowers/specs/: 2026-05-03-spritegen-stage1-design.md  2026-05-03-spritegen-stage4-design.md
engprod/docker/: BUILD.bazel
examples/bash/: BUILD.bazel
examples/cc/: BUILD.bazel
examples/grpc/client/: BUILD.bazel  greeter_client_integration_test.py
examples/grpc/protos/: BUILD.bazel
examples/llm/: BUILD.bazel  main.go
examples/rust/formatting_lib_demo/: BUILD.bazel
examples/rust/formatting_lib_demo/formatting/: BUILD.bazel
examples/rust/formatting_lib_demo/formatting/src/: lib.rs
examples/rust/formatting_lib_demo/src/: main.rs
examples/rust/helloworld/: BUILD.bazel
examples/rust/piston_window_demo/: BUILD.bazel
examples/rust/piston_window_demo/src/: main.rs
examples/rust/third_party_demo/: BUILD.bazel
examples/rust/third_party_demo/src/: main.rs
git/: BUILD.bazel
salsa/gg/ggo/ggo/: BUILD.bazel
salsa/llm/claude/: BUILD.bazel  claude.go
salsa/llm/vision/: BUILD.bazel  vision.go
salsa/tools/spritegen/: BUILD.bazel  main.go
salsa/tools/spritegen/spritesheet/: BUILD.bazel  spritesheet.go  spritesheet_test.go
salsa/tools/spritegen/testing/: BUILD.bazel
tools/: BUILD.bazel  gopackagesdriver.sh
