load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "llm_lib",
    srcs = ["main.go"],
    importpath = "github.com/juanique/monorepo/examples/llm",
    visibility = ["//visibility:private"],
    deps = ["//salsa/llm/claude"],
)

go_binary(
    name = "llm",
    embed = [":llm_lib"],
    visibility = ["//visibility:public"],
)
