load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "claude",
    srcs = ["claude.go"],
    importpath = "github.com/juanique/monorepo/salsa/llm/claude",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_anthropics_anthropic_sdk_go//:anthropic-sdk-go",
        "@com_github_anthropics_anthropic_sdk_go//option",
    ],
)
