load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ts",
    srcs = [
        "configure.go",
        "language.go",
        "metadata.go",
        "resolve.go",
        "ts.go",
    ],
    importpath = "github.com/juanique/monorepo/bazel/gazelle/language/ts",
    visibility = ["//visibility:public"],
    deps = [
        "//salsa/go/files",
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)
