load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "spritesheet",
    srcs = ["spritesheet.go"],
    importpath = "github.com/juanique/monorepo/salsa/tools/spritegen/spritesheet",
    visibility = ["//visibility:public"],
)

go_test(
    name = "spritesheet_test",
    srcs = ["spritesheet_test.go"],
    data = ["//salsa/tools/spritegen/testing:testdata"],
    deps = [
        ":spritesheet",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        # used by TestAnalyze_MainCharacter (added in Task 3)
        "@io_bazel_rules_go//go/tools/bazel",
    ],
)
